@@ -1,8 +1,8 @@
 Package: qgraph
 Type: Package
 Title: Network representations of relationships in data
-Version: 1.2.3
-Date: 2013-08-27
+Version: 1.2.4
+Date: 2013-11-29
 Author: Sacha Epskamp, Angelique O. J. Cramer, Lourens J. Waldorp, Verena D. Schmittmann and Denny Borsboom
 Maintainer: Sacha Epskamp <mail@sachaepskamp.com>
 Depends: R (>= 2.15.0)
